# sqa

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
examples/: player.rs  sawtooth.rs  simple_client.rs
sqa-backend/: Cargo.toml
sqa-backend-test/: Cargo.toml
sqa-backend-test/src/: main.rs
sqa-backend/src/: action_manager.rs  actions.rs  async.rs  codec.rs  commands.rs  errors.rs  handlers.rs  lib.rs  mixer.rs  save.rs  state.rs  undo.rs  waveform.rs
sqa-backend/src/actions/: audio.rs  fade.rs  mod.rs
sqa-engine/: Cargo.toml  README.md
sqa-engine/examples/: wav.rs
sqa-engine/src/: errors.rs  lib.rs  param.rs  sync.rs  thread.rs
sqa-ffmpeg/: Cargo.toml  README.md
sqa-ffmpeg/examples/: player.rs
sqa-ffmpeg/src/: ffi.rs  frame.rs
sqa-jack/: Cargo.toml  README.md
sqa-jack/examples/: simple_client.rs
sqa-jack/src/: errors.rs  lib.rs  port.rs  tests.rs
sqa-osc-custom-derive/: Cargo.toml
sqa-osc-custom-derive/src/: lib.rs
sqa-ui/: Cargo.toml
sqa-ui/src/: actions.rs  config.rs  connection.rs  copy.rs  errors.rs  main.rs  messages.rs  save.rs  sync.rs  ui.css  ui.glade  util.rs
sqa-ui/src/actions/: audio.rs  fade.rs  mod.rs  template.rs
sqa-ui/src/widgets/: duration.rs  entry.rs  mixer.rs  mod.rs  prop.rs
src/: backend.rs  bindgen.rs  cmdi.rs  command.rs  cues.rs  errors.rs  ffi.rs  frame.rs  handler.rs  hunk.glade  interface.css  interface.glade  lib.rs  main.rs  mixer.rs  parser.rs  port.rs  state.rs  stream.rs  streamv2.rs  sync.rs  tests.rs  thread.rs  ui.rs
src/commands/: load.rs  mod.rs  output.rs  pos.rs  prelude.rs  start.rs  stop.rs  stopstart.rs  vol.rs
src/ui/: chooser.rs  header.rs  interface.glade  line.rs  list.rs  mod.rs
src/ui/hunks/: checkbox.rs  entry.rs  ident.rs  mod.rs  text.rs  time.rs  volume.rs
