[package]
name = "sqa-jack"
version = "0.2.0"
description = "JACK bindings for Rust (part of the SQA project)"
documentation = "https://docs.rs/sqa-jack"
repository = "https://github.com/eeeeeta/sqa-jack"
readme = "README.md"
keywords = ["jack", "audio", "sqa"]
license = "Unlicense"
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]

[dependencies]
jack-sys = "0.1.3"
libc = "0.2"
bitflags = "0.7"
error-chain = "0.7"
