[package]
name = "sqa-engine"
version = "0.0.1"
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]

[dependencies]
sqa-jack = "0.3"
bounded-spsc-queue = { git = "https://github.com/eeeeeta/bounded-spsc-queue", rev = "542e581" }
time = "0.1"
arrayvec = "0.3"
hound = "3.0"
error-chain = "0.7"
parking_lot = "0.3"
uuid = { version = "0.3", features = ["v4"] }
