[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "sqa-backend"
version = "0.1.0"

[dependencies]
error-chain = "0.10"
fern = "0.4.0"
futures = "0.1"
log = "0.3.8"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
url = "1.4.0"

[dependencies.chrono]
features = ["serde"]
version = "0.3"

[dependencies.rosc]
path = "../rosc"

[dependencies.sqa-engine]
path = "../sqa-engine"
version = "0.3.0"

[dependencies.sqa-ffmpeg]
path = "../sqa-ffmpeg"
version = "0.2.3"

[dependencies.sqa-osc-custom-derive]
path = "../sqa-osc-custom-derive"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.5"
