[package]
name = "sqa-engine"
description = "High-performance realtime audio library"
documentation = "https://docs.rs/sqa-engine"
repository = "https://github.com/eeeeeta/sqa-engine"
readme = "README.md"
keywords = ["audio", "sqa"]
license = "CC0-1.0"
version = "0.2.3"
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]

[dependencies]
sqa-jack = { version = "0.5", path = "../sqa-jack" }
sqa-bounded-spsc-queue = "0.2"
time = "0.1"
arrayvec = { version = "0.3", features = ["use_union"] }
hound = "3.0"
error-chain = "0.10"
parking_lot = "0.3"
uuid = { version = "0.3", features = ["v4"] }
bspline = "0.2.2"

[features]

players-512 = []
channels-128 = []
