[package]
name = "sqa-ui"
version = "0.1.0"
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]

[dependencies]
sqa-backend = { path = "../sqa-backend" }
rosc = { path = "../rosc" }
tokio-core = "0.1"
futures = "0.1"
gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_16"] }
gdk = { git = "https://github.com/gtk-rs/gdk", features = ["v3_16"] }
glib = { git = "https://github.com/gtk-rs/glib" }
error-chain = "0.10"
time = "0.1"
uuid = { version = "0.5", features = ["v4", "serde"] }
url = "1.4"
fern = "0.4"
log = "0.3"
